feat(weather): all functionality added and working fine

--- a/Sunwise/Info.plist
+++ b/Sunwise/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please allow location to get the most accurate weather data</string>
 </dict>
 </plist>
